[gd_scene load_steps=5 format=3 uid="uid://5erm75pc5fdd"]

[ext_resource type="Script" path="res://src/common/water_detector/water_detector.gd" id="1_axsn5"]
[ext_resource type="Resource" uid="uid://bdx56ettfo3o7" path="res://src/environment/environment_resource.tres" id="2_otj83"]
[ext_resource type="Resource" uid="uid://caltt67cj0pty" path="res://src/autoload/time_manager/time_resource_gameplay.tres" id="3_s0c6i"]

[sub_resource type="SphereShape3D" id="7"]
radius = 0.1

[node name="WaterDetector" type="Area3D"]
collision_layer = 0
collision_mask = 16
monitorable = false
script = ExtResource("1_axsn5")
_environment_resource = ExtResource("2_otj83")
_time_resource_gameplay = ExtResource("3_s0c6i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
